--- a/style.css
+++ b/style.css
@@ -517,6 +517,12 @@ padding: 12px 14px;
 }
 
 /* =========================================
+   Área táctil invisible y fija para movil
+========================================= */
+
+
+
+/* =========================================
    CONTENIDO PRINCIPAL
 ========================================= */
 main {
