--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body.no-scroll {
 #sidebar.close .sidebar-footer div:hover::after {
   content: attr(data-label);
   position: fixed;
-  left: 60px;
+  left: 65px;
   background-color: var(--hover-clr);
   color: var(--text-clr);
   padding: 6px 10px;
@@ -308,6 +308,7 @@ body.no-scroll {
    EFECTOS HOVER
 ========================================= */
 #sidebar a:hover,
+#sidebar button:hover,
 #sidebar li.before-active a:hover,
 #sidebar li.after-active a:hover,
 #sidebar li.before-active .dropdown-btn:hover,
@@ -448,7 +449,7 @@ body.no-scroll {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
+  padding: 0 10px;
   height: 60px;
   background-color: var(--sidebar);
 }
