--- a/style.css
+++ b/style.css
@@ -614,11 +614,11 @@ main p {
     left: -260px;
     z-index: 1000;
     transition: left 0.3s ease-in-out;
-    border-radius: 0px 10px 10px 0px;
+    border-right: 1px solid var(--line-clr);
   }
 
   #userSidebar {
-    border-radius: 10px 0px 0px 10px;
+    border-left: 1px solid var(--line-clr);
   }
 
   #sidebar.show {
